--- a/trash/WebApplication1/WebApplication1/appsettings.json
+++ b/trash/WebApplication1/WebApplication1/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=KindlyDev;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionString": ""
+  "AllowedHosts": "*"
 }
